doc: clean up everything
